# dynamodb-manager

./: .env.example  CLAUDE.md  README.md  aws.sh  best-practices.md  directory-overview.md  new-rust.sh  product.md  tf.sh
dynamodb-manager-backend/: .cargo-deny.toml  .gitattributes  .gitignore  Cargo.toml  Dockerfile  about.toml  lint.sh  next.md  push_to_ecr.sh
dynamodb-manager-backend/src/: main.rs
frontend/: app.js  index.html  style.css
terraform/: dynamodb.tf  ecr.tf  lambda.tf  locals.tf  main.tf  s3.tf  variables.tf
