[package]
name = "dynamodb-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.9"
lambda_http = "0.9"
tokio = { version = "1.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "1.8"
aws-config = "1.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
